--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,15 @@ plugins {
 group 'com.kenshoo'
 version '1.0-SNAPSHOT'
 
-sourceCompatibility = 1.11
+java {
+	sourceCompatibility = '11'
+}
+
+configurations {
+	compileOnly {
+		extendsFrom annotationProcessor
+	}
+}
 
 repositories {
     mavenCentral()
@@ -13,7 +21,10 @@ repositories {
 
 dependencies {
     implementation 'com.google.inject:guice:4.0'
-
-    testImplementation 'junit:junit:4.12'
     testImplementation 'org.mockito:mockito-core:3.3.3'
+    testCompileOnly 'junit:junit:4.12' 
+	testRuntimeOnly 'org.junit.vintage:junit-vintage-engine:5.8.1'
+}
+test {
+    useJUnitPlatform()
 }
